# ansible-role-mongodb

./: .ansible-lint-ignore  .gitignore  .talismanrc  LICENSE  Makefile  README.md  pyproject.toml  requirements.yml
.github/workflows/: destroy.yml  keepalive.yml  lint.yml  main.yml  molecule.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/common/: converge.yml  destroy.yml  prepare.yml  verify.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/hold/: converge.yml  molecule.yml  side_effect.yml  verify.yml
molecule/install/: molecule.yml
molecule/reconfigure/: converge.yml  molecule.yml  side_effect.yml
molecule/replicaset/: converge.yml  molecule.yml  side_effect.yml
molecule/ufw/: molecule.yml
tasks/: configure.yml  install.yml  lock.yml  main.yml  service.yml
tasks/replicaset/: create.yml  manage.yml  reconfig.yml  reconfigure.yml
templates/: mongodb.conf.j2
