[tool.poetry]
name = "wpnops.mongodb"
version = "0.1.0"
description = ""
authors = ["wpnops"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
netaddr = "^0.9.0"
tox = "^3.25.0"
yamllint = "^1.27.1"
ansible = "7.2.0"
MarkupSafe = "2.0.1"
pytest = "^7.1.2"
cookiecutter = "^2.1.1"
molecule-docker = "^2.0.0"
molecule = "5.0.1"
pymongo = "^4.5.0"
python-gnupg = "^0.5.1"
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
