[tool.poetry]
name = "wpnops.mongodb"
version = "0.1.0"
description = ""
authors = ["wpnops"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
netaddr = "^0.9.0"
yamllint = "^1.32.0"
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" }
molecule = "^6.0.2"
molecule-docker = "^2.1.0"
ansible = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
